--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<a routerLink="/elements">Elements</a>
-<a routerLink="/collections">Collections</a>
-<router-outlet></router-outlet>
+<div class="ui container">
+    <div class="ui secondary pointing menu">        
+        <a routerLink="/elements" class="item">Elements</a>
+        <a routerLink="/collections" class="item">Collections</a>
+    </div>
+    <div class="ui segment">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
