--- a/src/app/elements/segment/segment.component.html
+++ b/src/app/elements/segment/segment.component.html
@@ -1,1 +1,7 @@
-<p>segment works!</p>
+<div class="ui placeholder segment">
+    <div class="ui icon header">
+        <i class="pdf file outline icon"></i>
+        No documents are listed for this customer.
+    </div>
+    <button class="ui primary button">Add Document</button>
+</div>
