Use app-segment

--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,2 +1,5 @@
 <app-divider>Placeholder Component</app-divider>
 <app-placeholder [header]="true" [lines]="2"></app-placeholder>
+
+<app-divider>Segment Component</app-divider>
+<app-segment></app-segment>
