--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -2,4 +2,22 @@
 <app-placeholder [header]="true" [lines]="2"></app-placeholder>
 
 <app-divider>Segment Component</app-divider>
-<app-segment></app-segment>
+<app-segment>
+    <header>
+        <i class="pdf file outline icon"></i>
+        No documents are listed for this customer.
+    </header>
+    <button class="ui primary button">
+        Add Document
+    </button>
+</app-segment>
+
+<app-segment>
+    <header>
+        <i class="add icon"></i>
+        Add a resource
+    </header>
+    <button class="ui primary button">
+        Click to add
+    </button>
+</app-segment>
