Add another app-segment without header

--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -11,13 +11,12 @@
         Add Document
     </button>
 </app-segment>
-
 <app-segment>
-    <header>
-        <i class="add icon"></i>
-        Add a resource
-    </header>
+    <!-- <header>
+        <i class="pdf file outline icon"></i>
+        No documents are listed for this customer.
+    </header> -->
     <button class="ui primary button">
-        Click to add
+        Add Document
     </button>
 </app-segment>
