--- a/src/app/collections/table/table.component.html
+++ b/src/app/collections/table/table.component.html
@@ -1,1 +1,9 @@
-<p>table works!</p>
+<table class="ui table">
+    <thead>
+        <tr>
+            <th *ngFor="let header of headers">
+                {{ header.label }}
+            </th>
+        </tr>
+    </thead>
+</table>
