Add tbody and for every record in data rtaverse headers array and display record of header.key

--- a/src/app/collections/table/table.component.html
+++ b/src/app/collections/table/table.component.html
@@ -6,4 +6,11 @@
             </th>
         </tr>
     </thead>
+    <tbody>
+        <tr *ngFor="let record of data">
+            <td *ngFor="let header of headers">
+                {{ record[header.key] }}
+            </td>
+        </tr>
+    </tbody>
 </table>
