--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -4,7 +4,12 @@
 <div class="ui grid">
     <div class="four wide column">
         <div class="ui vertical fluid tabular menu">
-            <a class="item" routerLink="./" routerLinkActive="active">Biography</a>
+            <a 
+            class="item" 
+            routerLink="./" 
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            >Biography</a>
             <a class="item" routerLink="companies" routerLinkActive="active">Companies</a>
             <a class="item" routerLink="partners" routerLinkActive="active">Partners</a>
         </div>
