--- a/src/app/collections/collections-home/collections-home.component.html
+++ b/src/app/collections/collections-home/collections-home.component.html
@@ -1,4 +1,14 @@
 <app-divider>Table Component</app-divider>
 <app-table classNames="striped celled" [data]="data" [headers]="headers"></app-table>
 <app-divider>Tab Menu</app-divider>
-<app-tabs></app-tabs>
+<app-tabs>
+    <a 
+    class="item" 
+    routerLink="./" 
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+    >Biography</a>
+    <a class="item" routerLink="companies" routerLinkActive="active">Companies</a>
+    <a class="item" routerLink="partners" routerLinkActive="active">Partners</a>
+
+</app-tabs>
