--- a/src/app/collections/tabs/tabs.component.html
+++ b/src/app/collections/tabs/tabs.component.html
@@ -1,14 +1,7 @@
 <div class="ui grid">
     <div class="four wide column">
         <div class="ui vertical fluid tabular menu">
-            <a 
-            class="item" 
-            routerLink="./" 
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-            >Biography</a>
-            <a class="item" routerLink="companies" routerLinkActive="active">Companies</a>
-            <a class="item" routerLink="partners" routerLinkActive="active">Partners</a>
+            <ng-content></ng-content>
         </div>
     </div>
     <div class="twelve wide stretched column">
