Add html to display list of items

--- a/src/app/views/item-list/item-list.component.html
+++ b/src/app/views/item-list/item-list.component.html
@@ -1,1 +1,17 @@
-<p>item-list works!</p>
+<div class="ui items">
+    <div class="items" *ngFor="let item of items">
+        <div class="image">
+            <img [src]="item.image" />
+        </div>
+        <div class="content">
+            <div class="header">
+                {{ item.title }}
+            </div>
+            <div class="description">
+                <p>
+                    {{ item.description }}
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
