Add html for modal

--- a/src/app/mods/modal/modal.component.html
+++ b/src/app/mods/modal/modal.component.html
@@ -1,1 +1,16 @@
-<p>modal works!</p>
+<div class="ui dimmer visible active">
+    <div class="ui modal visible active">
+        <i class="close icon"></i>
+        <div class="header">
+            MODAL!
+        </div>
+        <div class="content">
+            <p>
+                Some Content for the Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, perspiciatis fugit! Recusandae, tenetur. Dolore repellendus nam nesciunt quos, numquam quia consequatur soluta delectus aliquid tenetur.
+            </p>
+        </div>
+        <div class="actions">
+            <button class="ui button">OK</button>
+        </div>
+    </div>
+</div>
