Replace paragraph with ng-content

--- a/src/app/mods/modal/modal.component.html
+++ b/src/app/mods/modal/modal.component.html
@@ -5,9 +5,7 @@
             MODAL!
         </div>
         <div class="content">
-            <p>
-                Some Content for the Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, perspiciatis fugit! Recusandae, tenetur. Dolore repellendus nam nesciunt quos, numquam quia consequatur soluta delectus aliquid tenetur.
-            </p>
+            <ng-content></ng-content>
         </div>
         <div class="actions">
             <button (click)="onCloseClick()" class="ui button">OK</button>
