--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -1,3 +1,5 @@
 <app-divider>Modal Component</app-divider>
 <button (click)="onClick()">Show Modal</button>
-<app-modal (close)="onClick()" *ngIf="modalOpen"></app-modal>
+<app-modal (close)="onClick()" *ngIf="modalOpen">
+    <p>I am a reusable modal window</p>
+</app-modal>
