Add another div with ng-content and add actions-default class to ok button

--- a/src/app/mods/modal/modal.component.html
+++ b/src/app/mods/modal/modal.component.html
@@ -7,8 +7,11 @@
         <div class="content">
             <ng-content></ng-content>
         </div>
-        <div class="actions">
+        <div class="actions actions-default">
             <button (click)="onCloseClick()" class="ui button">OK</button>
+        </div>
+        <div class="actions">
+            <ng-content select="[modalFooter]"></ng-content>
         </div>
     </div>
 </div>
