--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -1,5 +1,9 @@
 <app-divider>Modal Component</app-divider>
 <button (click)="onClick()">Show Modal</button>
 <app-modal (close)="onClick()" *ngIf="modalOpen">
+    <div modalTitle>I am a reusable title </div>
     <p>I am a reusable modal window</p>
+    <ng-container modalFooter>
+        <button class="ui button" (click)="onClick()">Close ME!</button>
+    </ng-container>
 </app-modal>
