Show Accordion component inside mods-home component

--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -7,3 +7,5 @@
         <button class="ui button" (click)="onClick()">Close ME!</button>
     </ng-container>
 </app-modal>
+<app-divider>Accordion Comnponent!</app-divider>
+<app-accordion></app-accordion>
