Add html for accordion & display content from items array of objects

--- a/src/app/mods/accordion/accordion.component.html
+++ b/src/app/mods/accordion/accordion.component.html
@@ -1,1 +1,15 @@
-<p>accordion works!</p>
+<div class="ui styled accordion">
+    <ng-container *ngFor="let item of items; let i = index">
+        <div 
+            [ngClass]="{ active: i === openedItemIndex }"
+            class="title" (click)="onClick(i)"
+        >
+            <i class="dropdown icon">
+                {{ item.title }}
+            </i>
+        </div>
+        <div [ngClass]="{ active: i === openedItemIndex }" class="content">
+            <p>{{ item.content }}</p>
+        </div>
+    </ng-container>
+</div>
