Use app-accordion and pass items down to children

--- a/src/app/mods/mods-home/mods-home.component.html
+++ b/src/app/mods/mods-home/mods-home.component.html
@@ -8,4 +8,4 @@
     </ng-container>
 </app-modal>
 <app-divider>Accordion Comnponent!</app-divider>
-<app-accordion></app-accordion>
+<app-accordion [items]="items"></app-accordion>
